# agentic-regression-testing

./: .env.example  .gitignore  BUSINESS_ANALYSIS.md  CLAUDE.md  COMPLETE_REFACTORING_SUMMARY.md  DEMO_GUIDE.md  DOCUMENTATION_ANALYSIS.md  EPCC_EXPLORE.md  FILES_TO_REMOVE.md  GITHUB_LOGIN_TEST_ANALYSIS.md  LIVE_TEST_RESULTS.md  QUICKSTART.md  README.md  README_V2.md  REFACTORING_SUMMARY.md  STREAMLIT_FIX_SUMMARY.md  STREAMLIT_LAUNCH_GUIDE.md  STREAMLIT_UI_STATUS.md  TEST_EXECUTOR_MIGRATION_SUMMARY.md  TEST_FAILURES_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_PLANNER_MIGRATION_SUMMARY.md  USER_MANUAL.md  demo_individual_agents.py  demo_orchestrator_v2.py  demo_quick.py  live_test.py  main.py  pyproject.toml  requirements.txt  test_github_login.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
adapters/: __init__.py  api_adapter.py  base_adapter.py  custom_adapter.py  oracle_ebs_adapter.py  web_adapter.py
agents/: __init__.py  discovery.py  orchestrator.py  reporting.py  test_executor.py  test_generator.py  test_planner.py
agents_v2/: __init__.py  conversational_orchestrator_agent.py  conversational_state.py  discovery_agent_v2.py  orchestrator_agent_v2.py  reporting_agent_v2.py  state.py  test_executor_agent_v2.py  test_generator_agent_v2.py  test_planner_agent_v2.py
approvals/: APPROVAL-TEST-001.json
config/: __init__.py  app_profiles.yaml  llm_config.py  settings.py
docs/: ARCHITECTURE_V2.md  MIGRATION_GUIDE.md
examples/: custom_app_example.py  simple_example.py
hitl/: __init__.py  approval_manager.py  feedback_collector.py  review_interface.py
memory/: __init__.py  conversation_memory.py  redis_manager.py  schemas.py  state_manager.py
models/: __init__.py  app_profile.py  approval.py  test_case.py  test_result.py
rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
streamlit_ui/: __init__.py  app.py  auth.py  config.py
streamlit_ui/pages/: 02_🔍_Discovery.py  03_📋_Test_Planning.py  04_⚙️_Test_Generation.py  05_▶️_Test_Execution.py  06_📊_Reports.py  07_🔄_Full_Workflow.py  08_📊_Monitor.py  (+1 more)
test_results/: github_login_discovery.json
tests/: __init__.py  conftest.py
tools/: __init__.py  auto_register.py  base.py  registry.py
utils/: __init__.py  helpers.py  logger.py
web_ui/: README.md  __init__.py  app.py
(+56 files in other folders)
