[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-regression-suite"
version = "0.1.0"
description = "Agentic AI Regression Testing Framework using LangChain"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Regression Suite Team"}
]
keywords = ["testing", "regression", "ai", "langchain", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.1.20",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.38",
    "faiss-cpu>=1.7.4",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "pytest>=7.4.3",
    "requests>=2.31.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "isort",
]
oracle = [
    "cx_Oracle>=8.3.0",
    "sqlalchemy>=2.0.23",
]
web = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]
all = [
    "cx_Oracle>=8.3.0",
    "sqlalchemy>=2.0.23",
    "pymongo>=4.6.1",
    "chromadb>=0.4.22",
    "azure-devops>=7.1.0b4",
    "PyGithub>=2.1.1",
    "flask>=3.0.0",
]

[project.scripts]
regression-suite = "main:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["config", "agents", "tools", "adapters", "hitl", "rag", "models", "utils"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Don't collect from these directories
norecursedirs = ["tools", "agents", "adapters", "models", "config", "rag", "utils", "hitl"]
